# Laboratorio-di-programmazione

./: Book.cpp  CMakeLists.txt
Laboratorio 4/: Lista.cpp  Lista.h  main.cpp
Progetto intermedio/: Book.cpp
include/: Book.h  Date.h  Isbn.h
src/: Book.cpp  Date.cpp  Isbn.cpp  main.cpp
